# InformatiChats

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  translations_parser.py  vcpkg.json
.github/workflows/: cmake.yml
cmake/: CPM.cmake
src/: Application.cpp  Application.h  BatchRenderer.cpp  BatchRenderer.h  Chat.cpp  Chat.h  ChatApp.cpp  ChatApp.h  Shaders.h  console.h  imgui_impl_glfw_pixel.cpp  imgui_impl_opengl3_loader.h  imgui_impl_opengl3_pixel.cpp  main.cpp
src/Controller/: ChannelController.cpp  ChannelController.h  ChatController.cpp  ChatController.h  ConfigController.cpp  ConfigController.h  ConnexionController.cpp  ConnexionController.h  IChannelController.h  IChatController.h  IConfigController.h  IConnexionController.h  ILoginController.h  IUserController.h  LoginController.cpp  LoginController.h  UserController.cpp  UserController.h
src/Controller/DTO/: ChannelDTO.h  RemoteUserDTO.h
src/Controller/ViewModels/: ChannelViewModel.cpp  ChannelViewModel.h  ChatViewModel.cpp  ChatViewModel.h  ConfigViewModel.h  ConnexionViewModel.h  LoginViewModel.h  UserViewModel.h
src/Factory/: AbstractViewFactory.h
src/Model/: BinarySerializer.h  Chat.cpp  Chat.h  ChatClient.cpp  ChatClient.h  EventBus.h  IBinarySerializerAPI.h  IChatClient.h  IUser.h  MessageDispatcher.h  MessageFilter.h  Model.cpp  Model.h  PeerData.h  User.cpp  User.h  UserData.h  ZppSerializerAPI.h  modelspec.txt
src/Model/Application-Logic/: UserLogic.cpp  UserLogic.h
src/Model/ApplicationLogic/: ChannelMap.cpp  ChannelMap.h  ConfigLogic.cpp  ConfigLogic.h  PeerManager.cpp  PeerManager.h  PeerMap.cpp  PeerMap.h  RemoteUserMap.cpp  RemoteUserMap.h  UserDataManager.cpp  UserDataManager.h  UserEventManager.cpp  UserEventManager.h  UserLogic.cpp  UserLogic.h
src/Model/ApplicationLogic/Command/: CommandManager.cpp  CommandManager.h  ICommand.h  SaveNewConfigValueCommand.cpp  SaveNewConfigValueCommand.h  SetSelectedPeerIdCommand.cpp  SetSelectedPeerIdCommand.h
src/Model/ConfigUtils/: ConfigEntry.cpp  ConfigEntry.h  ConfigType.h  DefaultConfigGenerator.h  IConfigGenerator.h
src/Model/ConfigUtils/validators/: RangeValidator.hpp  StringLengthValidator.hpp  Validator.h
src/Model/Data-Access/: IChatAPI.h  LibDataChannelChatAPI.cpp  LibDataChannelChatAPI.h
src/Model/DataAccess/: IChatAPI.h  IConfigAPI.h  IConnectionAPI.h  ILocalUsersAPI.h  IPeeringAPI.h  ITextChatAPI.h  LibDataChannelChatAPI.cpp  LibDataChannelChatAPI.h  LibDatachannelAPIEvents.h  LibDatachannelConnectionAPI.cpp  LibDatachannelConnectionAPI.h  LibDatachannelPeeringAPI.cpp  LibDatachannelPeeringAPI.h  LibDatachannelState.cpp  LibDatachannelState.h  LibDatachannelTextChatAPI.cpp  LibDatachannelTextChatAPI.h  NlohmannJsonConfigAPI.cpp  NlohmannJsonConfigAPI.h  NlohmannJsonLocalUsersAPI.cpp  NlohmannJsonLocalUsersAPI.h
src/Model/DataAccess/libdatachannel/: LibDatachannelAPIEvents.h  LibDatachannelConnectionAPI.cpp  LibDatachannelConnectionAPI.h  LibDatachannelPeer.cpp  LibDatachannelPeer.h  LibDatachannelPeeringAPI.cpp  LibDatachannelPeeringAPI.h  LibDatachannelState.cpp  LibDatachannelState.h  LibDatachannelTextChatAPI.cpp  LibDatachannelTextChatAPI.h  Peer.cpp  Peer.h
src/Model/Models/: Channel.h  ChatEntry.h  ChatMessage.h  ChatMessageInfo.h  ConfigFile.hpp  ConfigRefPair.h  ConfigSchema.h  ConnectionState.h  Exchange.cpp  Exchange.h  LocalUser.h  LocalUserData.h  LocalUsers.h  Peer.h  PeerData.h  PeerEventMessages.h  RemoteUser.h  User.cpp  User.h  UserData.h
src/Model/Models/Exchanges/: SignalingExchanges.h
src/Model/Models/video/: H265Encoder.h  IEncoder.h
src/View/: IView.h  Shaders.h  View.cpp  View.h  console.h  imgui_impl_glfw_pixel.cpp  imgui_impl_glfw_pixel.h  imgui_impl_opengl3_loader.h  imgui_impl_opengl3_pixel.cpp  imgui_impl_opengl3_pixel.h
src/View/Backend/: GLFWWindowManager.cpp  GLFWWindowManager.h  IWindow.h
src/View/Event/: SetSelectedChannelEvent.h
src/View/GUI/: IGUIManager.h  ImGuiManager.hpp
src/View/Panels/: ChannelPanel.cpp  ChannelPanel.h  ChatPanel.cpp  ChatPanel.h  ConfigPanel.cpp  ConfigPanel.h  ConnexionPanel.cpp  ConnexionPanel.h  CreateNewUserPanel.cpp  CreateNewUserPanel.h  IPanel.h  LoginPanel.cpp  LoginPanel.h  UserInfoPanel.cpp  UserInfoPanel.h  VideoPanel.cpp  VideoPanel.h
src/View/Views/: ChannelView.cpp  ChannelView.h  ChatView.cpp  ChatView.h  ConfigView.cpp  ConfigView.h  ConnexionView.cpp  ConnexionView.h  IView.h  LoginView.cpp  LoginView.h
src/View/pxlui/: BatchRenderer.cpp  BatchRenderer.h  GLShaderUtil.cpp  GLShaderUtil.h  ShaderProgram.cpp  ShaderProgram.h
src/pxlui/: BatchRenderer.cpp  BatchRenderer.h  GLShaderUtil.h  ShaderProgram.cpp  ShaderProgram.h
src/util/: Base64.h  VariantUtil.h  string_util.cpp  string_util.h
src/util/crypto/: AESEncryption.cpp  AESEncryption.h  CryptoTest.h  Hashing.cpp  Hashing.h  Keygen.cpp  Keygen.h  RSAEncryption.cpp  RSAEncryption.h  RSAKeygen.cpp  RSAKeygen.h  UUID.cpp  UUID.h  keygen.cpp
translations/: configs.ini  fr.json  languages.json
